--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <!--End header-->
 
-    <div class="section-container">
-        <div class="left-container">
+    <div class="container-section">
+        <div class="container-section-left">
             <div class="content">
                 <div class="text01">
                     <h1>Indsigt</h1>
@@ -32,7 +32,7 @@
                 <a href="" id="button">MORE</a>
             </div>
         </div>
-        <div class="right-container">
+        <div class="container-section-right">
             <div class="bussiness">
                 <div class="content">
                     <div class="text01">
